<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/landmarks_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/load_more_infos"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/landmark_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"

            style="@style/LandmarkTitle"
            android:layout_alignBottom="@+id/landmarks_images"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:text="@string/placeholder" />
        <TextView
            android:id="@+id/landmark_position_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LandmarksDetailTitle"
            android:layout_below="@id/landmark_name"
            android:padding="8dp"
            android:text="@string/placeholder"/>
        <TextView
            android:id="@+id/landmark_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/landmark_position_name"
            android:padding="8dp"
            android:text="@string/placeholder"/>
        <Button
            android:id="@+id/take_me_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/landmark_description"
            android:text="@string/take_me_to"
            android:shadowRadius="5dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />




    </RelativeLayout>
</androidx.cardview.widget.CardView>